# DarkForge

./: .gitignore  NOTICE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md
.claude/hooks/: session-start.sh
.github/workflows/: main.yml  nightly.yml  pr.yml
apps/control-plane/: Dockerfile  README.md  pyproject.toml
apps/control-plane/app/: aks_client.py  config.py  exceptions.py  main.py
apps/control-plane/app/auth/: dependencies.py  jwt_validator.py  obo_exchange.py
apps/control-plane/app/middleware/: audit.py
apps/control-plane/app/routers/: healthz.py  sessions.py  users.py
apps/control-plane/tests/: test_jwt_validator.py  test_obo_exchange.py  test_sessions_router.py
apps/portal-api/: README.md  pyproject.toml
apps/portal-api/app/: clients.py  config.py  identity.py  main.py  swarm.py
apps/portal-api/tests/: test_history.py
docs/: ARCHITECTURE.md  DEVELOPER-EXPERIENCE.md  OPERATIONS.md  index.md  mission-and-architecture.md
evidence/screenshots/: SHOTS.md  _drive.py
evidence/screenshots/_raw/: 09.txt  10.txt  12.txt  13.txt  14.txt  16.txt
examples/kimi-agent-demo/: README.md  agent.py  kimi_client.py  pyproject.toml
examples/kimi-agent-demo/sandbox_image/: Dockerfile  build-and-push.sh
examples/kimi-agent-demo/tasks/: data-analysis.txt  multi-step-coding.txt  sandbox-isolation-test.txt
infra/bicep/: README.md  main.bicep
infra/bicep/modules/: aca.bicep  acr.bicep  aks.bicep  appgw.bicep  entra.bicep  firewall.bicep  kv.bicep  network.bicep  observability.bicep  user.bicep
infra/bicep/parameters/: dev.parameters.json
infra/helm/opensandbox/: Chart.yaml  README.md  values.dev.yaml  values.yaml
infra/helm/opensandbox/templates/: _helpers.tpl  azure-policy-constraints.yaml  cilium-default-deny.yaml  cilium-fqdn-allowlist.yaml  controller-deployment.yaml  controller-rbac.yaml  execd-daemonset.yaml  image-prewarm-controller-rbac.yaml  image-prewarm-daemonset.yaml  networkpolicy-namespace-template.yaml  ratify-configmap.yaml
scripts/phase0/: phase0-README.md  spike-cilium-kata-l7.sh  spike-kind-local.sh  spike-opensandbox-crd.sh
scripts/post-deploy/: create-notation-certs.sh
sdks/go/opensandbox/: README.md  client.go  client_test.go  errors.go  go.mod  go.sum  models.go
sdks/js/: README.md  package-lock.json  package.json  tsconfig.json
sdks/js/src/: client.ts  errors.ts  index.ts  models.ts
sdks/js/tests/: client.test.ts
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: agent_usage.py  basic_usage.py
sdks/python/opensandbox_azure/: __init__.py  _tracing.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_client.py
tests/: conftest.py
tests/e2e/: test_distributed_trace.py  test_sandbox_lifecycle.py
tests/integration/: test_obo_flow.py  test_propagation_probe.py  test_ratify_admission.py
tests/load/: concurrent_create.js
tests/observability/: test_audit_60s.py
tests/security/: test_container_escape.py
tests/security/escape_pocs/: cgroup_release_agent.sh  kmod_load.sh  proc_self_exe.sh
tests/webbridge/: test_portal_ux.py
