[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimi-agent-demo"
version = "0.1.0"
description = "Kimi K2.5 + OpenSandbox ACI agent demo for Azure AI Foundry"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.17",
    "azure-mgmt-containerinstance>=10.1",
    "azure-mgmt-resource>=23",
    "httpx>=0.27",
    "rich>=13",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
kimi-agent = "agent:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
