[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensandbox-azure"
version = "0.1.0"
description = "Python SDK for OpenSandbox on Azure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "azure-identity>=1.17",
    "httpx>=0.27",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["opensandbox_azure"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
